modify apptimer